--- a/package.json
+++ b/package.json
@@ -58,5 +58,38 @@
         "width": 2000
       }
     }
+  },
+  "scripts": {
+    "lint:js": "standard src/js/*.js gulpfile.js",
+    "lint:scss": "csscomb -c src/scss/.csscomb.json src/scss",
+    "lint": "yarn lint:js && yarn lint:scss",
+    "test": "yarn lint && gscan .",
+    "build": "gulp build",
+    "release": "gulp release --production",
+    "dev": "gulp develop"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "autoprefixer": "^9.3.1",
+    "css-mqpacker": "^7.0.0",
+    "csscomb": "^4.2.0",
+    "cssnano": "^4.1.7",
+    "del": "^5.0.0",
+    "gscan": "^2.2.1",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-header": "^2.0.5",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-livereload": "^4.0.0",
+    "gulp-load-plugins": "^2.0.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.1",
+    "gulp-zip": "^5.0.0",
+    "standard": "^12.0.1"
   }
 }
