--- a/package.json
+++ b/package.json
@@ -91,5 +91,8 @@
     "gulp-uglify": "^3.0.1",
     "gulp-zip": "^5.0.0",
     "standard": "^12.0.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
