--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rimay",
   "description": "Rimay awesome theme for Ghost",
   "demo": "https://godofredo.ninja",
+  "homepage": "https://github.com/godofredoninja/rimay#readme",
   "version": "0.0.1",
   "engines": {
     "ghost": ">=2.0.0",
@@ -59,6 +60,11 @@
       }
     }
   },
+  "browserslist": [
+    "last 2 versions",
+    "android 4",
+    "opera 12"
+  ],
   "scripts": {
     "lint:js": "standard src/js/*.js gulpfile.js",
     "lint:scss": "csscomb -c src/scss/.csscomb.json src/scss",
@@ -69,30 +75,35 @@
     "dev": "gulp develop"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
-    "autoprefixer": "^9.3.1",
-    "css-mqpacker": "^7.0.0",
-    "csscomb": "^4.2.0",
-    "cssnano": "^4.1.7",
-    "del": "^5.0.0",
-    "gscan": "^2.2.1",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-header": "^2.0.5",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^6.0.0",
-    "gulp-livereload": "^4.0.0",
-    "gulp-load-plugins": "^2.0.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
-    "gulp-zip": "^5.0.0",
-    "standard": "^12.0.1"
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "autoprefixer": "^9.6.1",
+    "babelify": "^10.0.0",
+    "browserify": "^16.3.0",
+    "css-mqpacker": "7.0.0",
+    "csscomb": "4.3.0",
+    "cssnano": "4.1.10",
+    "del": "5.0.0",
+    "gscan": "2.6.2",
+    "gulp": "4.0.2",
+    "gulp-babel": "8.0.0",
+    "gulp-header": "2.0.7",
+    "gulp-if": "2.0.2",
+    "gulp-imagemin": "6.0.0",
+    "gulp-livereload": "4.0.1",
+    "gulp-load-plugins": "2.0.0",
+    "gulp-plumber": "1.2.1",
+    "gulp-postcss": "8.0.0",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-uglify": "3.0.2",
+    "gulp-zip": "5.0.0",
+    "standard": "12.0.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "lazysizes": "^5.1.0",
     "normalize.css": "^8.0.1"
   }
 }
