--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
+    "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.5.4",
+    "@babel/runtime": "^7.5.4",
     "autoprefixer": "^9.6.1",
     "babelify": "^10.0.0",
     "browserify": "^16.3.0",
